[package]
name = "quotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws_lambda_events = "0.4.0"
http = "0.2.4"
lambda_runtime = "0.3.0"
log = "0.4.14"
simple_logger = "2.0.0"
tokio = "1.6.1"
native-tls = "0.2.10"
# openssl = "0.10.40"
# postgres-openssl = "0.5.0"
postgres-native-tls = "0.5.0"
serde = "1.0.140"
serde_json = "1.0.82"
tokio-postgres = "0.7.6"
